more cleanup on jupyter notebooks

--- a/transcriptomic_predictions_01_useBash_toPrepareProjectFolderOnceHaveAggregatedDatasets.ipynb
+++ b/transcriptomic_predictions_01_useBash_toPrepareProjectFolderOnceHaveAggregatedDatasets.ipynb
@@ -5,10 +5,7 @@
    "id": "e95b2505",
    "metadata": {},
    "source": [
-    "# (Purpose) Prepare the project folder once have the aggregated datasets\n",
-    "\n",
-    "- notice that the files have over 50000 columns(=genes) so it has not been filtered for protein-coding genes yet\n",
-    "- notice the number of columns are the same for both datasets so both cleaned to have same common genes already"
+    "# (Purpose) Prepare the project folder once have the aggregated datasets"
    ]
   },
   {
@@ -28,11 +25,11 @@
     "# WORKING_WITH_INDEPENDENT=\"GEO\"\n",
     "# WORKING_WITH_INDEPENDENT=\"ICGCGEO\"\n",
     "\n",
-    "tcga_log2tpm_ALL_GENES=data/tcga_original_data/TCGA.TPM.log.txt       # local computer\n",
-    "gtex_log2tpm_ALL_GENES=data/gtex_original_data/GTEX.TPM.log.txt       # local computer\n",
-    "# gtex_log2tpm_ALL_GENES=data/icgc_original_data/ICGC.TPM.log.txt       # local computer \n",
-    "# gtex_log2tpm_ALL_GENES=data/geo_original_data/GEO.TPM.log.txt         # local computer \n",
-    "# gtex_log2tpm_ALL_GENES=data/icgcgeo_original_data/ICGC.GEO.TPM.log.txt         # local computer \n",
+    "tcga_log2tpm_ALL_GENES=data/tcga_original_data/TCGA.TPM.log.txt       \n",
+    "gtex_log2tpm_ALL_GENES=data/gtex_original_data/GTEX.TPM.log.txt       \n",
+    "# gtex_log2tpm_ALL_GENES=data/icgc_original_data/ICGC.TPM.log.txt      \n",
+    "# gtex_log2tpm_ALL_GENES=data/geo_original_data/GEO.TPM.log.txt         \n",
+    "# gtex_log2tpm_ALL_GENES=data/icgcgeo_original_data/ICGC.GEO.TPM.log.txt         \n",
     "\n",
     "if [ \"$WORKING_WITH_INDEPENDENT\" = \"GTEX\" ]; then\n",
     "    echo \" -----------------------------------------------------------------------\"    \n",
