--- a/transcriptomic_predictions_02_useR_toFilterAndCleanAggregatedDatasets.ipynb
+++ b/transcriptomic_predictions_02_useR_toFilterAndCleanAggregatedDatasets.ipynb
@@ -5,10 +5,7 @@
    "id": "7bec825a",
    "metadata": {},
    "source": [
-    "# (Purpose) Drop some labels, split TCGA data, drop genes with zero expresison\n",
-    "\n",
-    "- (if flag set to true) drop tissue types types from train data that are not in independent test data set\n",
-    "- drop labels not wanted like (ESCC, STAD.EBV, LUSC) ---- need to do this on the mock dataset too!"
+    "# (Purpose) Filter and Clean aggregated datasets"
    ]
   },
   {
@@ -75,13 +72,9 @@
     "# load packages\n",
     "print(\"  begin -- loading packages\")\n",
     "\n",
-    "library(dplyr)                  # a powerful and user-friendly package for data manipulation and transformation, \n",
-    "                                #   providing a consistent and intuitive grammar to efficiently perform common data \n",
-    "                                #   tasks on data frames and tibbles.  \n",
-    "library(readr)                  # for reading and importing data from various file formats, offering fast and \n",
-    "                                #   memory-efficient data import capabilities into R.\n",
-    "library(data.table)             # extends data frames, providing enhanced functionality for handling large datasets, \n",
-    "                                #   aggregation, joins, and more with concise syntax.\n",
+    "library(dplyr)                  \n",
+    "library(readr)                  \n",
+    "library(data.table)             \n",
     "\n",
     "print(\"  done  -- loading packages\")"
    ]
