--- a/transcriptomic_predictions_04_useR_toApplyNormalization_QNtarget.ipynb
+++ b/transcriptomic_predictions_04_useR_toApplyNormalization_QNtarget.ipynb
@@ -17,8 +17,8 @@
    "source": [
     "# ---------------------- TCGA dataset ---------------------------              ** make sure input and outputs match!\n",
     "# ---------------------------- input file------------------------\n",
-    "# filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
-    "filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection.tsv\"    # real data\n",
+    "filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
+    "# filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection.tsv\"    # real data\n",
     "\n",
     "# ---------------------------- output file-----------------------\n",
     "save_filename_tcga = \"tcga_unscaled_qntarget_nobatchcorrection.tsv\"   # real data\n",
@@ -26,8 +26,8 @@
     "\n",
     "# ---------------------- GTEx dataset ---------------------------     \n",
     "# ---------------------------- input file------------------------\n",
-    "# filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
-    "filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection.tsv\"    # real data\n",
+    "filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
+    "# filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection.tsv\"    # real data\n",
     "\n",
     "# ---------------------------- output file-----------------------\n",
     "save_filename_gtex = \"gtex_unscaled_qntarget_nobatchcorrection.tsv\"   # real data"
@@ -73,19 +73,11 @@
     "# load packages\n",
     "print(\"  begin -- loading packages\")\n",
     "\n",
-    "library(dplyr)                  # a powerful and user-friendly package for data manipulation and transformation, \n",
-    "                                #   providing a consistent and intuitive grammar to efficiently perform common data \n",
-    "                                #   tasks on data frames and tibbles.  \n",
-    "library(readr)                  # for reading and importing data from various file formats, offering fast and \n",
-    "                                #   memory-efficient data import capabilities into R.\n",
-    "library(stringr)                # for working with strings in R, offering a set of easy-to-use functions for string \n",
-    "                                #   manipulation, pattern matching, and text extraction.\n",
-    "library(data.table)             # extends data frames, providing enhanced functionality for handling large datasets, \n",
-    "                                #   aggregation, joins, and more with concise syntax.\n",
-    "library(preprocessCore)         # provides a collection of functions for preprocessing and normalizing microarray \n",
-    "                                #   and RNA-Seq data, offering essential tools for quality control, \n",
-    "                                #   background correction, and normalization to ensure accurate  \n",
-    "                                #   and reliable downstream analyses.\n",
+    "library(dplyr)                  \n",
+    "library(readr)                  \n",
+    "library(stringr)                \n",
+    "library(data.table)             \n",
+    "library(preprocessCore)         \n",
     "\n",
     "print(\"  done  -- loading packages\")"
    ]
