--- a/transcriptomic_predictions_06_useR_toRemoveBatchEffectOnInputDatasets.ipynb
+++ b/transcriptomic_predictions_06_useR_toRemoveBatchEffectOnInputDatasets.ipynb
@@ -33,11 +33,11 @@
     "\n",
     "# ---------------------- TCGA dataset ---------------------------              ** make sure input and outputs match!\n",
     "# ---------------------------- input file------------------------\n",
-    "# filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
+    "filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
     "# filename_tcga = \"tcga_unscaled_unnormalized_nobatchcorrection.tsv\"      # real data0 (baseline)\n",
     "# filename_tcga = \"tcga_unscaled_qn_nobatchcorrection.tsv\"                # real data2\n",
     "# filename_tcga = \"tcga_unscaled_qntarget_nobatchcorrection.tsv\"          # real data4\n",
-    "filename_tcga = \"tcga_unscaled_fsqn_nobatchcorrection.tsv\"              # real data6\n",
+    "# filename_tcga = \"tcga_unscaled_fsqn_nobatchcorrection.tsv\"              # real data6\n",
     "\n",
     "# ---------------------------- output file-----------------------\n",
     "# save_filename_tcga = \"tcga_unscaled_unnormalized_batchcorrected.tsv\"    # real data1\n",
@@ -49,7 +49,7 @@
     "# save_filename_tcga = \"tcga_unscaled_unnormalized_batchcorrected_diseaseconsortium.tsv\"   \n",
     "# save_filename_tcga = \"tcga_unscaled_qn_batchcorrected.tsv\"              # real data3\n",
     "# save_filename_tcga = \"tcga_unscaled_qntarget_batchcorrected.tsv\"        # real data5\n",
-    "save_filename_tcga = \"tcga_unscaled_fsqn_batchcorrected.tsv\"            # real data7\n",
+    "# save_filename_tcga = \"tcga_unscaled_fsqn_batchcorrected.tsv\"            # real data7\n",
     "\n",
     "WORKING_WITH_INDEPENDENT=\"GTEX\"\n",
     "# WORKING_WITH_INDEPENDENT=\"ICGC\"\n",
@@ -58,7 +58,7 @@
     "\n",
     "# ---------------------- GTEx dataset ---------------------------     \n",
     "# ---------------------------- input file------------------------\n",
-    "# filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
+    "filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"  \n",
     "# filename_gtex = \"gtex_unscaled_unnormalized_nobatchcorrection.tsv\"      # real data0 (baseline)\n",
     "# filename_gtex = \"gtex_unscaled_qn_nobatchcorrection.tsv\"                # real data2\n",
     "# filename_gtex = \"gtex_unscaled_qntarget_nobatchcorrection.tsv\"          # real data4\n",
@@ -74,7 +74,7 @@
     "# save_filename_gtex = \"gtex_unscaled_unnormalized_batchcorrected_diseaseconsortium.tsv\"   \n",
     "# save_filename_gtex = \"gtex_unscaled_qn_batchcorrected.tsv\"              # real data3\n",
     "# save_filename_gtex = \"gtex_unscaled_qntarget_batchcorrected.tsv\"        # real data5\n",
-    "save_filename_gtex = \"gtex_unscaled_fsqn_batchcorrected.tsv\"            # real data7"
+    "# save_filename_gtex = \"gtex_unscaled_fsqn_batchcorrected.tsv\"            # real data7"
    ]
   },
   {
@@ -122,29 +122,14 @@
     "# load packages\n",
     "print(\"  begin -- loading packages\")\n",
     "\n",
-    "library(dplyr)                  # a powerful and user-friendly package for data manipulation and transformation, \n",
-    "                                #   providing a consistent and intuitive grammar to efficiently perform common data \n",
-    "                                #   tasks on data frames and tibbles.  \n",
-    "library(tibble)                 # introduces an improved data frame structure with added features, designed for \n",
-    "                                #   efficient data manipulation and analysis while offering a more user-friendly \n",
-    "                                #   and informative output.\n",
-    "library(readr)                  # for reading and importing data from various file formats, offering fast and \n",
-    "                                #   memory-efficient data import capabilities into R.\n",
-    "library(limma)                  # for the analysis of gene expression data, providing linear models and \n",
-    "                                #   empirical Bayes methods for identifying differentially expressed genes in \n",
-    "                                #   microarray and RNA-Seq experiments.\n",
-    "library(stringr)                # for working with strings in R, offering a set of easy-to-use functions for string \n",
-    "                                #   manipulation, pattern matching, and text extraction.\n",
-    "# library(tidyr)                  # facilitates data tidying by reorganizing and transforming data into a structured \n",
-    "#                                 #   format, making it easier for analysis and visualization.\n",
-    "library(data.table)             # extends data frames, providing enhanced functionality for handling large datasets, \n",
-    "                                #   aggregation, joins, and more with concise syntax.\n",
-    "# library(poibm)                  # a novel method for correcting batch effects in RNA-seq data between heterogeneous populations\n",
-    "library(sva)                    # provides a comprehensive set of tools for identifying and mitigating unwanted \n",
-    "                                #   sources of variation, such as batch effects or other confounding factors, \n",
-    "                                #   in high-dimensional omics data, enhancing the quality and reliability of \n",
-    "                                #   downstream analyses.\n",
-    "library(bladderbatch)           # _TODO_forExampleCode_removeLater?\n",
+    "library(dplyr)                  \n",
+    "library(tibble)                \n",
+    "library(readr)                  \n",
+    "library(limma)                  \n",
+    "library(stringr)                \n",
+    "library(data.table)             \n",
+    "library(sva)                    \n",
+    "library(bladderbatch)           \n",
     "\n",
     "print(\"  done  -- loading packages\")"
    ]
