--- a/transcriptomic_predictions_07_usePython_toBuildClassifierAndEvaluatePerformance.ipynb
+++ b/transcriptomic_predictions_07_usePython_toBuildClassifierAndEvaluatePerformance.ipynb
@@ -19,7 +19,7 @@
     "# SCALE_DATA = True \n",
     "\n",
     "# ---------------------- TCGA dataset ---------------------------              \n",
-    "# PATH_TO_TCGA_DATA  = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"                 \n",
+    "PATH_TO_TCGA_DATA  = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"                 \n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_nobatchcorrection.tsv\"  # realData0\n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_batchcorrected.tsv\"     # realData1 \n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_batchcorrected_protocol.tsv\"      \n",
@@ -29,7 +29,7 @@
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_batchcorrected_protocolconsortium.tsv\"   \n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_unnormalized_batchcorrected_diseaseconsortium.tsv\"   \n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_qn_nobatchcorrection.tsv\"            # realData2\n",
-    "PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_qn_batchcorrected.tsv\"               # realData3\n",
+    "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_qn_batchcorrected.tsv\"               # realData3\n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_qntarget_nobatchcorrection.tsv\"      # realData4\n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_qntarget_batchcorrected.tsv\"         # realData5\n",
     "# PATH_TO_TCGA_DATA = \"data/preprocessing_combinations/tcga_unscaled_fsqn_nobatchcorrection.tsv\"          # realData6\n",
@@ -37,7 +37,7 @@
     "    \n",
     "    \n",
     "# ---------------------- GTEx dataset ---------------------------     \n",
-    "# PATH_TO_GTEX_DATA  = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"                 \n",
+    "PATH_TO_GTEX_DATA  = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_nobatchcorrection__mockData.tsv\"                 \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_nobatchcorrection.tsv\"  # realData0             \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_batchcorrected.tsv\"     # realData1            \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_batchcorrected_protocol.tsv\"                \n",
@@ -47,7 +47,7 @@
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_batchcorrected_protocolconsortium.tsv\"   \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_unnormalized_batchcorrected_diseaseconsortium.tsv\"                    \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_qn_nobatchcorrection.tsv\"            # realData2\n",
-    "PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_qn_batchcorrected.tsv\"               # realData3\n",
+    "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_qn_batchcorrected.tsv\"               # realData3\n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_qntarget_nobatchcorrection.tsv\"      # realData4 \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_qntarget_batchcorrected.tsv\"         # realData5             \n",
     "# PATH_TO_GTEX_DATA = \"data/preprocessing_combinations/gtex_unscaled_fsqn_nobatchcorrection.tsv\"          # realData6\n",
@@ -83,21 +83,7 @@
    "id": "1c0f0f9c",
    "metadata": {},
    "source": [
-    "## Import packages required in Python\n",
-    "\n",
-    "*remember that these packages need to be installed first via command line, usually with the command*\n",
-    "<pre>\n",
-    "    $ pip install XXXXXXXXXX\n",
-    "</pre>\n",
-    "\n",
-    "**a useful strategy for resolving issues with importing packages in Jupyter notebook's virtual environment**\n",
-    "- (source) https://stackoverflow.com/questions/42178070/jupyter-notebook-importerror-no-module-named-sklearn\n",
-    "- Find where the pip package is installed\n",
-    "    <pre>\n",
-    "    !pip show PACKAGE_NAME\n",
-    "    </pre>\n",
-    "- Add that directory to path\n",
-    "- Finally, import the package"
+    "## Import packages required in Python"
    ]
   },
   {
@@ -109,102 +95,32 @@
    "source": [
     "print(\"  begin -- importing Python packages\")\n",
     "\n",
-    "import numpy as np              # stands for Numerical Python, adds support functions for large arrays and matrices\n",
-    "import pandas as pd             # for data manipulation and analysis, provides data structures and read/write functions\n",
-    "import matplotlib               # the de facto standard library for plotting in Python\n",
-    "import matplotlib.cm            # provides a collection of colormaps for mapping scalar data to colors, enabling \n",
-    "                                #   customization of the color representation in plots and visualizations, \n",
-    "                                #   making it useful for enhancing the visual interpretation of data.\n",
-    "import matplotlib.pyplot as plt # provides a simplified interface to create static, interactive, and animated \n",
-    "                                #   visualizations in Python, making it easy to plot various types of data and \n",
-    "                                #   produce high-quality graphics for data exploration and presentation.\n",
+    "import numpy as np              \n",
+    "import pandas as pd             \n",
+    "import matplotlib               \n",
+    "import matplotlib.cm            \n",
+    "import matplotlib.pyplot as plt \n",
     "from matplotlib.ticker import MaxNLocator\n",
-    "                                # automatically determines the locations of tick marks on an axis in a plot, \n",
-    "                                # ensuring that the maximum number of ticks is displayed while maintaining \n",
-    "                                # readability and avoiding overcrowding, making it convenient for controlling \n",
-    "                                # the tick locations on a plot axis.\n",
-    "import joblib                   # provides efficient persistence (saving and loading) mechanisms for Python objects, \n",
-    "                                #   particularly useful for caching and reusing trained machine learning models \n",
-    "                                #   and other computationally expensive objects.\n",
-    "# import multiprocessing          # enables the creation and management of multiple processes, providing a simple and \n",
-    "#                                 #   efficient way to parallelize tasks and take advantage of multi-core processors \n",
-    "#                                 #   for concurrent execution, making it useful for improving performance and \n",
-    "#                                 #   efficiency in CPU-bound applications.\n",
+    "import joblib                   \n",
     "        \n",
-    "import os                       # provides a way to interact with the operating system, allowing you to perform tasks \n",
-    "                                #   such as file and directory operations, environment variables manipulation, \n",
-    "                                #   and executing system commands, making it a fundamental module for system-level \n",
-    "                                #   programming in Python.\n",
-    "import umap.umap_ as umap       # UMAP (Uniform Manifold Approximation and Projection) is a Python library that \n",
-    "                                #   provides a dimensionality reduction technique for embedding high-dimensional \n",
-    "                                #   data into a lower-dimensional space while preserving the local structure and \n",
-    "                                #   relationships of the data points, making it particularly useful for visualizing \n",
-    "                                #   and exploring complex datasets in a reduced space.\n",
-    "                                #   (if have issue with import) https://github.com/lmcinnes/umap/issues/828\n",
-    "import openpyxl                 # allows for reading, writing, and manipulating Excel files (XLSX format), making it \n",
-    "                                #   a valuable tool for working with spreadsheet data in Python programs.\n",
+    "import os                       \n",
+    "import umap.umap_ as umap       \n",
+    "import openpyxl                 \n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "                                # provides standardizing features by removing the mean and scaling to unit variance,\n",
-    "                                # ensuring that the data follows a standard normal distribution, which is important\n",
-    "                                #  or many machine learning algorithms\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "                                # scales and transforms features in a dataset to a specified range (typically [0, 1]),\n",
-    "                                # preserving the relationships between the data points and ensuring they are within a \n",
-    "                                # uniform scale, which is particularly useful for improving the convergence and \n",
-    "                                # performance of machine learning algorithms that are sensitive to feature scaling.\n",
     "from sklearn.preprocessing import LabelEncoder            \n",
-    "                                # used for encoding categorical labels into numeric values, allowing machine learning \n",
-    "                                # algorithms to work with categorical data by transforming them into a format \n",
-    "                                # suitable for numeric computations.\n",
-    "# from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "#                                 # provides train-tests splits while preserving the class distribution\n",
     "from sklearn.model_selection import StratifiedKFold \n",
-    "                                # provides a stratified k-fold cross-validation strategy, ensuring that each fold of \n",
-    "                                # the cross-validation preserves the class distribution, making it suitable for \n",
-    "                                # evaluating the performance of machine learning models on imbalanced datasets.\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "                                # performs an exhaustive search over specified hyperparameter values for an estimator,\n",
-    "                                # allowing the selection of the best hyperparameters through cross-validation, \n",
-    "                                # making it easier to fine-tune machine learning models for optimal performance.\n",
     "from sklearn.decomposition import PCA\n",
-    "                                # provides function to perform principal componenent analysis, a dimensionality \n",
-    "                                # reduction technique used to transform high-dimensional data into a lower-dimensional\n",
-    "                                # representation while preserving its most important features.\n",
     "from sklearn.pipeline import Pipeline\n",
-    "                                # enables the creation of a unified workflow by chaining multiple data transformation\n",
-    "                                # and modeling steps together, simplifying the process of building and deploying\n",
-    "                                # machine learning pipelines.\n",
     "from sklearn.svm import SVC\n",
-    "                                # implements the Support Vector Machine algorithm for classification, which is a \n",
-    "                                # powerful supervised learning method used for separating data into different classes\n",
-    "                                # by finding an optimal hyperplane in a high-dimensional feature space.\n",
     "from sklearn.metrics import classification_report\n",
-    "                                # generates a comprehensive report containing various evaluation metrics such as \n",
-    "                                # precision, recall, F1-score, and support, providing a detailed summary of the \n",
-    "                                # performance of a classification model on different classes, making it useful \n",
-    "                                # for assessing the model's effectiveness.\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "                                # computes a confusion matrix, which is a tabular representation of predicted versus \n",
-    "                                # actual class labels, providing insights into the performance of a classification \n",
-    "                                # model by showing the counts of true positives, true negatives, false positives, \n",
-    "                                # and false negatives, aiding in evaluating the model's predictive accuracy.\n",
     "from sklearn.metrics import f1_score\n",
-    "                                # calculates the F1 score, which is a measure of a model's accuracy that combines \n",
-    "                                # precision and recall, providing a single metric to evaluate the overall performance \n",
-    "                                # of a binary or multiclass classification model, making it useful for assessing \n",
-    "                                # the model's effectiveness in terms of both precision and recall simultaneously.\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
-    "                                # calculates the balanced accuracy score, which computes the average of \n",
-    "                                # sensitivity (true positive rate) and specificity (true negative rate) for \n",
-    "                                # evaluating the performance of a classification model on imbalanced datasets, \n",
-    "                                # making it useful for assessing the model's ability to handle class imbalances. \n",
     "from sklearn.metrics import matthews_corrcoef                \n",
-    "                                # computes the Matthews correlation coefficient, which is a measure of the quality \n",
-    "                                # of a binary classification model, taking into account true positives, \n",
-    "                                # true negatives, false positives, and false negatives, making it useful for \n",
-    "                                # assessing the model's overall performance on imbalanced datasets and handling \n",
-    "                                # classes with unequal sample sizes.   \n",
+    "                                \n",
     "\n",
     "                \n",
     "    \n",
@@ -1425,38 +1341,6 @@
    "metadata": {},
    "source": [
     "# Main Function cont."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9244653",
-   "metadata": {},
-   "source": [
-    "### Main Function --- model building \n",
-    "    \n",
-    "- for training/fitting the model to capture patters from the provided data; the *heart of data modeling*\n",
-    "    * cross-validation involves tuning its hyperparameters\n",
-    "        + multiple splits of the training set into training subsets and validation subset occur\n",
-    "        + this is so that the results can be averaged (e.g. K-fold cross validation, with typical k-value of 5 or 10)\n",
-    "        + helps reduce variance of performance estimates and to get a more accurate estimate of model performance\n",
-    "    * (use 10-outer-folds cross-validation that splits the training set into training **sub**sets)\n",
-    "    * (subset #1 for training)   from 800 train samples into 80 subtrain samples\n",
-    "        + (for hyperparameter optimization, k=5 inner-fold)\n",
-    "        + (outer fold k=1, inner fold k=1) from 80 subtrain samples into 16 \n",
-    "        + (outer fold k=1, inner fold k=2) from 80 subtrain samples into 16 \n",
-    "        + (outer fold k=1, inner fold k=3) from 80 subtrain samples into 16 \n",
-    "        + (outer fold k=1, inner fold k=4) from 80 subtrain samples into 16 \n",
-    "        + (outer fold k=1, inner fold k=5) from 80 subtrain samples into 16 \n",
-    "    * (subset #2 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #3 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #4 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #5 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #6 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #7 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #8 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #9 for training)   from 800 train samples into 80 subtrain samples\n",
-    "    * (subset #10 for holdout)    from 800 train samples into 80 holdout samples used for cv testing\n",
-    "        "
    ]
   },
   {
